# cpp-metrics

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
src/: counter.hpp  gauge.hpp  histogram.hpp  meter.hpp  moving_average.hpp  random_reservoir.hpp  registry.cpp  registry.hpp  reporter.hpp  reservoir.hpp  sliding_window_reservoir.hpp  snapshot.hpp  timer.hpp
src/instruments/: counter.hpp  gauge.hpp  histogram.hpp  meter.hpp  scoped_timer.hpp  timer.hpp
src/reporting/: boost_serializer.hpp  boost_serializing.hpp  graphite_serializer.hpp
src/utils/: make_unique.hpp  regular_updater_mixin.hpp
test/: boost_serializer_test.cpp  common.cpp  common.hpp  counter_test.cpp  ewma_test.cpp  graphite_serializer_test.cpp  histogram_test.cpp  meter_test.cpp  other.cpp  registry_test.cpp  regular_updater_test.cpp  sliding_reservoir_test.cpp  snapshot_test.cpp  testing.cpp  timer_test.cpp
